--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!-- Libraries -->
   <script src="libs/exif.min.js"></script>
   <script src="libs/jsmediatags.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
