--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>File Analyzer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <div class="container">
-    <h1>🔍 File Analyzer</h1>
-    <input type="file" id="fileInput" />
-    <div id="output"></div>
-  </div>
 
   <!-- Libraries -->
-  <script src="libs/exif.min.js"></script>
-  <script src="libs/jsmediatags.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jsmediatags@3.9.7/dist/jsmediatags.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+</head>
+<body>
+  <h1>📁 File Analyzer</h1>
+  <input type="file" id="fileInput" />
+  <div id="metadata"></div>
+
   <script src="main.js"></script>
 </body>
 </html>
