--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jsmediatags@3.9.7/dist/jsmediatags.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+  <script src="https://unpkg.com/mediainfo.js@0.3.5/dist/umd/index.min.js"></script>
 </head>
 <body>
   <h1>📁 File Analyzer</h1>
